# shadl

./: .gitignore  Cargo.toml  README.md
mnist_trainer/: Cargo.toml
mnist_trainer/src/: main.rs
mnist_ui/: Cargo.toml
mnist_ui/src/: main.rs
mnist_wasm/: Cargo.toml
mnist_wasm/src/: lib.rs
shadl/: Cargo.toml
shadl/src/: lib.rs  losses.rs  matrix.rs  nn.rs  no_rayon.rs  serialization.rs  test_utils.rs  trainer.rs
shadl/src/dataset/: augment.rs  mnist.rs  mod.rs  utils.rs
shadl/src/layer/: affine.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs
shadl/src/optimizer/: mod.rs  simple_gradient_descent.rs
