[package]
name = "mnist_trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadl = { path = "../shadl", features = ["easy_datasets"] }
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }