[package]
name = "mnist_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadl = { path = "../shadl", features = ["easy_datasets"]}
egui = "0.18.1"
eframe = { version = "0.18.0" }
egui_extras = { version = "0.18.0", features = ["image"] }
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }