[package]
name = "mnist_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.82"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
shadl = { path = "../shadl" }
getrandom = { version = "0.2.7", features = ["js"] }
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }

[dev-dependencies]
wasm-bindgen-test = "0.3.32"

[profile.release]
opt-level = "s"