[package]
name = "shadl"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
reqwest = { version = "0.11.2", features = ["blocking"], optional = true }
flate2 = { version = "1.0.24", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.5.3"

[dev-dependencies]
proptest = "1.0.0"

[features]
easy_datasets = ["dep:reqwest", "dep:flate2"]